--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rollup-plugin-svelte": "*",
     "schild": "^0.3.1",
     "svelte": "^2.7.2",
+    "vue-json-content": "^1.0.5",
     "vue-style-loader": "^4.1.0",
     "vuex": "^3.0.1"
   },
