--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "babel-eslint": "^8.2.4",
     "css-loader": "^0.28.11",
     "electron-better-ipc": "^0.1.1",
     "electron-store": "^2",
     "electron-util": "^0.9",
     "git-url-parse": "^9.0.1",
-    "isomorphic-git": "^0.19.3",
+    "isomorphic-git": "0.19.4",
     "lodash": "^4.17.10",
     "mark.js": "^8.11.1",
     "normalize.css": "^8.0.0",
+    "prettier-eslint": "^8.8.2",
     "quasar-cli": "^0.16.4",
     "require-wrapper": "^1.0.0",
-    "rollup": "^0.60.7",
+    "rollup": "^0.61",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-cpy": "^1.0.0",
     "rollup-plugin-glob-import": "^0.2.3",
@@ -30,7 +32,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-svelte": "*",
     "schild": "^0.3.1",
-    "svelte": "^2.7.2",
+    "svelte": "^2.8.1",
     "vue-json-content": "^1.0.5",
     "vue-style-loader": "^4.1.0",
     "vuex": "^3.0.1"
@@ -43,7 +45,7 @@
     "electron-devtools-installer": "",
     "electron-packager": "",
     "electron-rebuild": "",
-    "eslint": "",
+    "eslint": "^5.0.0",
     "eslint-config-standard": "",
     "eslint-friendly-formatter": "",
     "eslint-loader": "",
