webview verwenden, bugfixes, appveyor einsetzen

--- a/package.json
+++ b/package.json
@@ -10,53 +10,52 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "babel-eslint": "^8.2.4",
+    "cheap-watch": "^1.0.0",
     "css-loader": "^0.28.11",
+    "dugite": "^1.78.0",
     "electron-better-ipc": "^0.1.1",
     "electron-store": "^2",
-    "electron-util": "^0.9",
-    "git-url-parse": "^9.0.1",
-    "isomorphic-git": "0.19.4",
-    "lodash": "^4.17.10",
+    "electron-util": "^0.9.1",
+    "git-url-parse": "^10.1.0",
+    "lodash": "^4.17.11",
     "mark.js": "^8.11.1",
+    "mssql": "^4.2.2",
     "normalize.css": "^8.0.0",
-    "prettier-eslint": "^8.8.2",
-    "quasar-cli": "^0.16.4",
     "require-wrapper": "^1.0.0",
-    "rollup": "^0.61",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-cpy": "^1.0.0",
-    "rollup-plugin-glob-import": "^0.2.3",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-svelte": "*",
-    "schild": "^0.3.1",
-    "svelte": "^2.8.1",
+    "rollup": "^0.66.6",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-svelte": "^4.3.2",
+    "schild": "^0.3.4",
+    "svelte": "^2.14.0",
+    "tar": "^4.4.6",
+    "vue": "^2.5.17",
     "vue-json-content": "^1.0.5",
-    "vue-style-loader": "^4.1.0",
+    "vue-style-loader": "^4.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "",
+    "babel-eslint": "^10.0.1",
     "devtron": "",
-    "electron": "^2",
+    "electron": "^3.0.4",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "",
-    "electron-packager": "",
-    "electron-rebuild": "",
-    "eslint": "^5.0.0",
-    "eslint-config-standard": "",
+    "electron-packager": "^12.2.0",
+    "electron-rebuild": "^1.8.2",
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "",
-    "eslint-loader": "",
-    "eslint-plugin-import": "",
-    "eslint-plugin-jest": "",
-    "eslint-plugin-node": "",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "",
-    "eslint-plugin-vue": "",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.25.1",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1",
     "prettier-eslint": "",
-    "quasar-cli": ""
+    "quasar-cli": "^0.17.20",
+    "strip-ansi": "^3.0.1"
   },
   "optionalDependencies": {
     "fsevents": "^1.0.0"
