--- a/package.json
+++ b/package.json
@@ -10,25 +10,23 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "cheap-watch": "^1.0.0",
-    "css-loader": "^0.28.11",
-    "dugite": "^1.78.0",
+    "cheap-watch": "^1.0.1",
+    "css-loader": "^1.0.0",
+    "dugite": "^1.79.0",
     "electron-better-ipc": "^0.1.1",
     "electron-store": "^2",
-    "electron-util": "^0.9.1",
+    "electron-util": "^0.10.1",
     "git-url-parse": "^10.1.0",
     "lodash": "^4.17.11",
     "mark.js": "^8.11.1",
-    "mssql": "^4.2.2",
     "normalize.css": "^8.0.0",
-    "require-wrapper": "^1.0.0",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-svelte": "^4.3.2",
     "schild": "^0.3.4",
-    "svelte": "^2.14.0",
+    "svelte": "^2.14.3",
     "tar": "^4.4.6",
     "vue": "^2.5.17",
     "vue-json-content": "^1.0.5",
@@ -38,22 +36,22 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "devtron": "",
-    "electron": "^3.0.4",
+    "electron": "^3.0.6",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "",
     "electron-packager": "^12.2.0",
     "electron-rebuild": "^1.8.2",
+    "electron-wix-msi": "^2.1.1",
     "eslint": "^5.7.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.25.1",
+    "eslint-plugin-jest": "^21.26.2",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^4.7.1",
-    "prettier-eslint": "",
     "quasar-cli": "^0.17.20",
     "strip-ansi": "^3.0.1"
   },
