--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ install:
   - npm install -g vue-cli
   - npm install quasar-cli
   - |-
-      echo 'export const VERSION = "Build ID: %APPVEYOR_BUILD_ID%, Build No: %APPVEYOR_BUILD_NUMBER%, Git Hash: %APPVEYOR_REPO_COMMIT%, Git Message: %APPVEYOR_REPO_COMMIT_MESSAGE%" > src-electron/main-process/version.js
+      echo export const VERSION = "Build ID: %APPVEYOR_BUILD_ID%, Build No: %APPVEYOR_BUILD_NUMBER%, Git Hash: %APPVEYOR_REPO_COMMIT%, Git Message: %APPVEYOR_REPO_COMMIT_MESSAGE%" > src-electron/main-process/version.js
   - cat src-electron/main-process/version.js
 
 cache:
