minor dep updates

--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
     "rollup-plugin-svelte": "^4.4.0",
     "schild": "^0.3.6",
     "svelte": "^2.15.3",
-    "vue": "^2.5.17",
+    "vue": "^2.5.21",
     "vue-json-content": "^1.0.5",
     "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.21",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "devtron": "",
-    "electron": "^3.0.10",
+    "electron": "^3.0.11",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "",
     "electron-packager": "^12.2.0",
     "electron-rebuild": "^1.8.2",
     "electron-wix-msi": "^2.1.1",
-    "eslint": "^5.9.0",
+    "eslint": "^5.10.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "",
     "eslint-loader": "^2.1.1",
