--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,7 +24,7 @@ artifacts:
 
 deploy:
   release: v$(appveyor_build_version)
-  description: 'Push build'
+  description: 'Automatisiertes Push-Build. Für aktuelle Änderungen die Commit-Logs anschauen.'
   provider: GitHub
   auth_token:
     secure: xf39YWukS9Xjl8akZBdy3e/7xbl4pQn7qdpsguMuV2JcZkZ4zBj2nyh1D0ooi9pW
