--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
   },
   "dependencies": {
     "cheap-watch": "^1.0.2",
-    "css-loader": "^2.1.0",
-    "electron-better-ipc": "^0.1.2",
-    "electron-store": "^2",
-    "electron-util": "^0.10.2",
-    "i": "^0.3.6",
     "lodash": "^4.17.11",
     "mark.js": "^8.11.1",
     "normalize.css": "^8.0.1",
@@ -25,21 +20,20 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.1",
     "schild": "^0.3.6",
-    "svelte": "^3.0.0-alpha16",
-    "vue": "^2.5.21",
-    "vue-json-content": "^1.0.5",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.21",
-    "vuex": "^3.0.1"
+    "svelte": "^3.0.0-alpha16"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "css-loader": "^2.1.0",
     "devtron": "",
     "electron": "^3.1.0",
+    "electron-better-ipc": "^0.1.2",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "",
     "electron-packager": "^13.0.1",
     "electron-rebuild": "^1.8.2",
+    "electron-store": "^2.0.0",
+    "electron-util": "^0.10.2",
     "electron-wix-msi": "^2.1.1",
     "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
@@ -51,7 +45,11 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.1.0",
     "quasar-cli": "^0.17.23",
-    "strip-ansi": "^3.0.1"
+    "strip-ansi": "^3.0.1",
+    "vue": "^2.5.21",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.21",
+    "vuex": "^3.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
