--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.1.0",
+    "mousetrap": "^1.6.2",
     "quasar-cli": "^0.17.23",
     "strip-ansi": "^3.0.1",
     "svelte": "^3.0.0-alpha17",
