--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.1",
-    "schild": "^0.3.6"
+    "schild": "^0.3.6",
+    "svelte": "^3.0.0-alpha19"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -45,7 +46,6 @@
     "mousetrap": "^1.6.2",
     "quasar-cli": "^0.17.23",
     "strip-ansi": "^3.0.1",
-    "svelte": "^3.0.0-alpha19",
     "vue": "^2.5.22",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.22",
