dep updates und fix fir npm audit

--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.1",
-    "schild": "^0.3.6",
+    "schild": "^0.3.7",
     "svelte": "^3.0.0-beta.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "css-loader": "^2.1.0",
-    "devtron": "",
+    "devtron": "^1.4.0",
     "electron": "^3.1.3",
     "electron-better-ipc": "^0.1.2",
     "electron-debug": "^2.1.0",
-    "electron-devtools-installer": "",
+    "electron-devtools-installer": "^2.2.4",
     "electron-packager": "^13.0.1",
     "electron-rebuild": "^1.8.4",
     "electron-store": "^2.0.0",
@@ -36,7 +36,7 @@
     "electron-wix-msi": "^2.1.1",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
