--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "schild.report",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Schild Reports mit HTML erstellen",
   "productName": "schild.report",
   "cordovaId": "org.cordova.quasar.app",
-  "author": "hmt",
+  "author": "hmt <dev@hmt.im>",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "cheap-watch": "^1.0.2",
@@ -19,48 +20,36 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.1",
     "schild": "^0.3.7",
-    "svelte": "^3.0.0-beta.3"
+    "svelte": "^3.0.0-beta.3",
+    "@quasar/extras": "^1.0.0",
+    "quasar": "^1.0.0-beta.0"
   },
   "devDependencies": {
+    "@quasar/app": "^1.0.0-beta.2",
+    "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "css-loader": "^2.1.0",
     "devtron": "^1.4.0",
-    "electron": "^3.1.3",
+    "electron": "^3.1.1",
     "electron-better-ipc": "^0.1.2",
     "electron-debug": "^2.1.0",
     "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^13.0.1",
-    "electron-rebuild": "^1.8.4",
     "electron-store": "^2.0.0",
     "electron-util": "^0.11.0",
     "electron-wix-msi": "^2.1.1",
-    "eslint": "^5.13.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.1.0",
+    "eslint": "^5.10.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^5.0.0",
     "mousetrap": "^1.6.2",
-    "quasar-cli": "^0.17.23",
-    "strip-ansi": "^3.0.1",
-    "vue": "^2.6.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.3",
-    "vuex": "^3.1.0"
+    "strip-ansi": "=3.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
-    "npm": ">= 5.6.0"
+    "npm": ">= 5.6.0",
+    "yarn": ">= 1.6.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 10"
-  ],
-  "build": {
-    "asar": true
-  }
+  ]
 }
