--- a/package.json
+++ b/package.json
@@ -20,25 +20,26 @@
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.1",
-    "schild": "^0.3.7",
+    "schild": "^0.4.5",
+    "serialize-error": "^3.0.0",
     "svelte": "^3.0.0-beta.3"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-beta.3",
+    "@quasar/app": "^1.0.0-beta.4",
     "@quasar/extras": "^1.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "devtron": "^1.4.0",
-    "electron": "^3.1.1",
+    "electron": "^3.1.4",
     "electron-better-ipc": "^0.1.2",
     "electron-debug": "^2.1.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-packager": "^13.0.1",
     "electron-util": "^0.11.0",
     "electron-wix-msi": "^2.1.1",
-    "eslint": "^5.10.0",
+    "eslint": "^5.14.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.1",
     "mousetrap": "^1.6.2",
     "quasar": "^1.0.0-beta.1",
     "strip-ansi": "=3.0.1"
