--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "monaco-editor-webpack-plugin": "^1.7.0",
     "mousetrap": "^1.6.2",
     "quasar": "^1.0.0-beta.4",
+    "snarkdown": "^1.2.2",
     "strip-ansi": "=3.0.1"
   },
   "engines": {
