--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "devtron": "^1.4.0",
-    "electron": "^4.1.4",
+    "electron": "^5.0.0-beta.8",
     "electron-better-ipc": "^0.2.0",
     "electron-debug": "^2.2.0",
     "electron-devtools-installer": "^2.2.4",
