--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "vue-monaco": "^0.3.2"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-beta.23",
+    "@quasar/app": "^1.0.0-rc.1",
     "@quasar/extras": "^1.1.2",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
@@ -43,7 +43,7 @@
     "eslint-plugin-vue": "^5.2.2",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "mousetrap": "^1.6.3",
-    "quasar": "^1.0.0-beta.23",
+    "quasar": "^1.0.0-rc.2",
     "snarkdown": "^1.2.2",
     "strip-ansi": "=3.0.1"
   },
