--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron-store": "^3.3.0",
     "lodash": "^4.17.11",
     "mark.js": "^8.11.1",
+    "mysql": "^2.17.1",
     "pg": "^7.11.0",
     "rollup": "^1.16.1",
     "rollup-plugin-commonjs": "^10.0.0",
