--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "mark.js": "^8.11.1",
     "mysql": "^2.17.1",
     "pg": "^7.11.0",
-    "rollup": "^1.16.1",
+    "rollup": "^1.16.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.0.3",
+    "rollup-plugin-node-resolve": "^5.0.4",
     "rollup-plugin-svelte": "^5.1.0",
     "schild": "^0.5.2",
     "serialize-error": "^4.1.0",
@@ -33,12 +33,12 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.2",
     "devtron": "^1.4.0",
-    "electron": "^5.0.4",
-    "electron-better-ipc": "^0.2.0",
-    "electron-debug": "^2.2.0",
+    "electron": "^5.0.5",
+    "electron-better-ipc": "github:hmt/electron-better-ipc",
+    "electron-debug": "^3.0.0",
     "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^13.1.1",
-    "electron-util": "^0.11.0",
+    "electron-packager": "^14.0.0",
+    "electron-util": "^0.12.1",
     "electron-wix-msi": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.1",
