--- a/package.json
+++ b/package.json
@@ -16,36 +16,36 @@
     "mark.js": "^8.11.1",
     "mysql": "^2.17.1",
     "pg": "^7.11.0",
-    "rollup": "^1.16.3",
+    "rollup": "^1.16.6",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.1.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
     "schild": "^0.5.2",
     "serialize-error": "^4.1.0",
-    "svelte": "^3.6.1",
+    "svelte": "^3.6.4",
     "vue-monaco": "^1.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-rc.7",
+    "@quasar/app": "^1.0.2",
     "@quasar/extras": "^1.1.4",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.2",
     "devtron": "^1.4.0",
-    "electron": "^4.2.5",
+    "electron": "^4.2.6",
     "electron-better-ipc": "github:hmt/electron-better-ipc",
-    "electron-debug": "^3.0.0",
+    "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^14.0.0",
+    "electron-packager": "^14.0.1",
     "electron-store": "^4.0.0",
     "electron-util": "^0.12.1",
     "electron-wix-msi": "^2.1.1",
     "eslint": "^5.16.0",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-vue": "^5.2.3",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "mousetrap": "^1.6.3",
-    "quasar": "^1.0.0-rc.5",
+    "quasar": "^1.0.3",
     "snarkdown": "^1.2.2",
     "strip-ansi": "=3.0.1"
   },
