--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,8 @@
-.quasar
+node_modules/
+release/
+package-lock.jsonbuild
+build/bundle.*
+build/*.js
+build/*.map
 .DS_Store
-.thumbs.db
-node_modules
-/dist
-/src-cordova/platforms
-/src-cordova/plugins
-/src-cordova/www
-/src/statics/plugins
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-schild-report.code-workspace
