--- a/package.json
+++ b/package.json
@@ -1,59 +1,46 @@
 {
   "name": "schild.report",
-  "version": "1.0.0",
-  "description": "Schild Reports mit HTML erstellen",
-  "productName": "schild.report",
-  "cordovaId": "org.cordova.quasar.app",
-  "author": "hmt <dev@hmt.im>",
+  "author": "hmt",
+  "version": "2.0.0",
+  "main": "build/main.js",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.vue src",
-    "test": "echo \"No test specified\" && exit 0"
+    "build": "rollup --config",
+    "start": "npm run build && run-s start:*",
+    "dev": "rollup -c && run-p dev:*",
+    "package-win":   "electron-packager . --overwrite --name=schild.report --platform=win32  --arch=ia32 --icon=icons/icon.ico  --asar --out=release",
+    "package-mac":   "electron-packager . --overwrite --name=schild.report --platform=darwin --arch=x64  --icon=icons/icon.icns --asar --out=release",
+    "package-linux": "electron-packager . --overwrite --name=schild.report --platform=linux  --arch=x64  --icon=icons/icon.png  --asar --out=release",
+    "start:electron": "electron .",
+    "dev:development": "rollup --config --watch",
+    "dev:electron": "electron ."
+  },
+  "devDependencies": {
+    "electron": "^6.0.7",
+    "electron-packager": "^14.0.5",
+    "electron-wix-msi": "^2.1.1",
+    "npm-run-all": "^4.1.5",
+    "rollup-plugin-node-externals": "^2.0.0"
   },
   "dependencies": {
+    "bulma": "^0.7.5",
     "cheap-watch": "^1.0.2",
-    "dot-prop": "^5.1.0",
+    "comlink": "^4.0.2",
+    "electron-store": "^4.0.0",
+    "electron-util": "^0.12.1",
+    "knex": "^0.19.3",
     "lodash": "^4.17.15",
     "mark.js": "^8.11.1",
     "mysql": "^2.17.1",
+    "objection": "^1.6.9",
     "pg": "^7.12.1",
-    "rollup": "^1.20.3",
+    "rollup": "^1.21.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
-    "schild": "^0.5.4",
     "serialize-error": "^4.1.0",
     "snarkdown": "^1.2.2",
-    "svelte": "^3.9.2"
-  },
-  "devDependencies": {
-    "@quasar/app": "^1.0.6",
-    "@quasar/extras": "^1.3.1",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "devtron": "^1.4.0",
-    "electron": "^6.0.7",
-    "electron-better-ipc": "github:hmt/electron-better-ipc",
-    "electron-debug": "^3.0.1",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^14.0.5",
-    "electron-store": "^4.0.0",
-    "electron-util": "^0.12.1",
-    "electron-wix-msi": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "mousetrap": "^1.6.3",
-    "quasar": "^1.1.0",
-    "strip-ansi": "=3.0.1"
-  },
-  "engines": {
-    "node": ">= 8.9.0",
-    "npm": ">= 5.6.0",
-    "yarn": ">= 1.6.0"
-  },
-  "browserslist": [
-    "Electron 6.0"
-  ]
+    "svelte": "^3.10.0"
+  }
 }
