--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ skip_tags: true
 install:
   - set path=c:\Program Files (x86)\WiX Toolset v3.11\bin;%path%
   - |-
-      echo export const VERSION = { buildID: '%APPVEYOR_BUILD_ID%', buildVersion: '%APPVEYOR_BUILD_VERSION%', buildNo: '%APPVEYOR_BUILD_NUMBER%', gitHash: '%APPVEYOR_REPO_COMMIT%', gitMessage: '%APPVEYOR_REPO_COMMIT_MESSAGE%' }> src/version.js
+      echo export const VERSION = { buildID: '%APPVEYOR_BUILD_ID%', buildVersion: '%APPVEYOR_BUILD_VERSION%', buildNo: '%APPVEYOR_BUILD_NUMBER%', gitHash: '%APPVEYOR_REPO_COMMIT%', gitMessage: '%APPVEYOR_REPO_COMMIT_MESSAGE%', production: true }> src/version.js
   - cat src/version.js
   - npm install
 
