--- a/package.json
+++ b/package.json
@@ -16,32 +16,33 @@
     "dev:electron": "electron ."
   },
   "devDependencies": {
-    "electron": "^6.0.12",
-    "electron-packager": "^14.0.6",
-    "electron-wix-msi": "^2.1.1",
+    "electron": "^6.1.5",
+    "electron-packager": "^14.1.1",
+    "electron-wix-msi": "^2.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup-plugin-node-externals": "^2.0.1"
+    "rollup-plugin-node-externals": "^2.1.2"
   },
   "dependencies": {
-    "bulma": "^0.7.5",
+    "bulma": "^0.8.0",
     "cheap-watch": "^1.0.2",
-    "comlink": "^4.0.4",
-    "electron-store": "^5.0.0",
-    "electron-util": "^0.12.2",
-    "knex": "^0.19.5",
+    "comlink": "^4.1.0",
+    "electron-store": "^5.1.0",
+    "electron-util": "^0.13.0",
+    "kne": "^3.0.23",
+    "knex": "^0.20.2",
     "lodash": "^4.17.15",
     "mark.js": "^8.11.1",
     "mysql": "^2.17.1",
     "objection": "^1.6.11",
-    "pg": "^7.12.1",
-    "rollup": "^1.23.1",
+    "pg": "^7.14.0",
+    "rollup": "^1.27.5",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.0",
+    "rollup-plugin-svelte": "^5.1.1",
     "schild": "^0.5.4",
     "serialize-error": "^5.0.0",
     "snarkdown": "^1.2.2",
-    "svelte": "^3.12.1"
+    "svelte": "^3.15.0"
   }
 }
