--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-svelte": "^5.1.1",
     "schild": "^0.5.4",
     "serialize-error": "^5.0.0",
