--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "electron-packager": "^14.2.1",
     "electron-wix-msi": "^2.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup-plugin-node-externals": "^2.1.3"
+    "rollup-plugin-node-externals": "^2.1.3",
+    "svelte-spinner": "^2.0.2"
   },
   "dependencies": {
     "bulma": "^0.8.0",
