ignore new tags

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: Build and release schild.report
 on: push
+  branches:
+    - '**'
+  tags-ignore:
+    - '*.*.*'
 jobs:
   release:
     runs-on: ${{ matrix.os }}
