--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "svelte-spinner": "^2.0.2"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "bulma": "^0.8.0",
     "cheap-watch": "^1.0.2",
     "comlink": "^4.2.0",
@@ -37,11 +40,8 @@
     "mysql": "^2.18.1",
     "objection": "^2.1.3",
     "pg": "^7.18.2",
-    "rollup": "^1.32.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.4.1",
+    "rollup": "^2.1.0",
+    "rollup-plugin-postcss": "^2.5.0",
     "rollup-plugin-svelte": "^5.1.1",
     "schild": "^0.5.4",
     "serialize-error": "^6.0.0",
