--- a/package.json
+++ b/package.json
@@ -18,34 +18,34 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
-    "electron": "^8.2.0",
-    "electron-builder": "^22.4.1",
+    "electron": "^8.2.4",
+    "electron-builder": "^22.5.1",
     "electron-packager": "^14.2.1",
     "electron-wix-msi": "^2.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup-plugin-node-externals": "^2.1.3",
+    "rollup-plugin-node-externals": "^2.1.5",
     "svelte-spinner": "^2.0.2"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "bulma": "^0.8.1",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "bulma": "^0.8.2",
     "cheap-watch": "^1.0.2",
-    "comlink": "^4.2.0",
+    "comlink": "^4.2.1",
     "electron-store": "^5.1.1",
-    "electron-util": "^0.14.0",
-    "knex": "^0.20.13",
+    "electron-util": "^0.14.1",
+    "knex": "^0.21.1",
     "mark.js": "^8.11.1",
     "mysql": "^2.18.1",
     "objection": "^2.1.3",
-    "pg": "^7.18.2",
-    "rollup": "^2.2.0",
-    "rollup-plugin-postcss": "^2.5.0",
-    "rollup-plugin-svelte": "^5.1.1",
+    "pg": "^8.0.3",
+    "rollup": "^2.7.3",
+    "rollup-plugin-postcss": "^3.1.1",
+    "rollup-plugin-svelte": "5.1.1",
     "schild": "^0.6.0",
     "serialize-error": "^6.0.0",
     "snarkdown": "^1.2.2",
-    "svelte": "^3.20.1"
+    "svelte": "^3.21.0"
   }
 }
