--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "electron-packager": "^14.2.1",
     "electron-wix-msi": "^2.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup-plugin-node-externals": "^2.1.5",
-    "svelte-spinner": "^2.0.2"
+    "rollup-plugin-node-externals": "^2.1.5"
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
