--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql": "^2.18.1",
     "objection": "^2.2.3",
     "pg": "^8.3.3",
+    "require-from-string": "^2.0.2",
     "rollup": "^2.28.1",
     "rollup-plugin-svelte": "^6.0.1",
     "schild": "^0.6.0",
