--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-packager": "^15.1.0",
     "electron-wix-msi": "^3.0.4",
     "npm-run-all": "^4.1.5",
+    "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-node-externals": "^2.2.0"
   },
   "dependencies": {
@@ -41,7 +42,7 @@
     "pg": "^8.4.1",
     "require-from-string": "^2.0.2",
     "rollup": "^2.32.1",
-    "rollup-plugin-svelte": "^6.1.1",
+    "rollup-plugin-svelte": "^7.0.0",
     "schild": "^0.6.0",
     "serialize-error": "^7.0.1",
     "snarkdown": "^2.0.0",
