--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-commonjs": "^18.0.0-1",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "electron": "^11.0.1",
     "electron-builder": "^22.9.1",
