--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0-1",
-    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "electron": "^12.0.0",
     "electron-builder": "^22.9.1",
     "electron-packager": "^15.1.0",
@@ -34,7 +34,7 @@
     "cheap-watch": "^1.0.2",
     "comlink": "^4.3.0",
     "electron-store": "^8.0.0",
-    "electron-util": "^0.15.0",
+    "electron-util": "^0.16.0",
     "idb-keyval": "^5.0.2",
     "knex": "^0.95.1",
     "mark.js": "^8.11.1",
