--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Build and release schild.report
 on:
   push:
@@ -14,7 +15,7 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: Get npm cache directory
         id: npm-cache
         run: |
@@ -26,9 +27,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install Node.js, NPM
-        uses: actions/setup-node@v1
-      - name: Install Dependencies
-        run: npm install
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          check-latest: true
+      - run: npm install
       - name: set version
         run: |
           echo "export const VERSION = { gitHash: '${{ github.sha }}', buildVersion: '2.4.${{ github.run_number }}', production: true }" > src/version.js
