--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "electron-store": "^8.0.0",
     "electron-util": "^0.16.0",
     "idb-keyval": "^5.0.2",
-    "knex": "^0.95.1",
+    "knex": "<0.95.0",
     "mark.js": "^8.11.1",
     "mysql": "^2.18.1",
     "objection": "^2.2.3",
