--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "package-win": "electron-packager . --overwrite --name=schild.report --platform=win32  --arch=ia32 --icon=icons/icon.ico  --asar --out=release",
     "package-mac": "electron-packager . --overwrite --name=schild.report --platform=darwin --arch=x64  --icon=icons/icon.icns --asar --out=release",
     "package-linux": "electron-packager . --overwrite --name=schild.report --platform=linux  --arch=x64  --icon=icons/icon.png  --asar --out=release",
-    "dist": "electron-builder",
+    "dist": "electron-builder --config electron-builder-config.js",
     "start:electron": "electron .",
     "dev:development": "rollup --config --watch",
     "dev:electron": "electron .",
