--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,9 +44,10 @@ jobs:
         run: npm run build -m
       - name: Package
         run: npm run dist
+        # Build number is automatically appended to version from package.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_RUN_NUMBER: ${{ github.run_number }}
+          BUILD_NUMBER: ${{ github.run_number }}
           THE_AUTHOR: ${{ secrets.AUTHOR }}
           THE_EMAIL: ${{ secrets.EMAIL }}
       - name: show dir
