--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
     "electron-store": "^8.0.0",
     "electron-util": "^0.17.0",
     "idb-keyval": "^6.0.2",
-    "knex": "<0.95.0",
+    "knex": "^0.95.14",
     "mark.js": "^8.11.1",
     "mysql": "^2.18.1",
-    "objection": "^2.2.3",
+    "objection": "^3.0.0",
     "pg": "^8.4.1",
     "require-from-string": "^2.0.2",
     "rollup": "^2.42.0",
     "rollup-plugin-svelte": "^7.0.0",
-    "schild": "^0.7.0",
+    "schild": "^0.8.0",
     "serialize-error": "^9.0.0",
     "snarkdown": "^2.0.0",
     "svelte": "^3.29.4"
