--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "schild": "^0.8.0",
     "serialize-error": "^9.0.0",
     "snarkdown": "^2.0.0",
-    "svelte": "^3.29.4"
+    "svelte": "^3.29.4",
+    "tedious": "^14.0.0"
   }
 }
