Ausgabe von  Fehlermeldungen bei Dokumentverarbeitung Suchpfade für imports ergänzt Schülermodel erweitert Substitution von rootdir/bassdir ermöglicht

--- a/package.json
+++ b/package.json
@@ -30,19 +30,21 @@
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "bulma": "^0.9.1",
     "cheap-watch": "^1.0.2",
     "comlink": "^4.3.0",
     "electron-store": "^8.0.0",
     "electron-util": "^0.17.0",
     "idb-keyval": "^6.0.2",
-    "mark.js": "^8.11.1",
     "knex": "^1.0.3",
+    "mark.js": "^8.11.1",
     "mysql": "^2.18.1",
     "objection": "^3.0.0",
     "pg": "^8.4.1",
     "require-from-string": "^2.0.2",
     "rollup": "^2.42.0",
+    "rollup-plugin-includepaths": "^0.2.4",
     "rollup-plugin-svelte": "^7.0.0",
     "schild": "^0.8.0",
     "serialize-error": "^9.0.0",
