--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "electron-builder": "^23.6.0",
     "electron-packager": "^17.1.1",
     "electron-wix-msi": "^5.0.0",
-    "knex": "^1.0.3",
+    "knex": "^2.4.0",
     "npm-run-all": "^4.1.5",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-node-externals": "^5.1.0"
@@ -37,15 +37,17 @@
     "comlink": "^4.3.0",
     "electron-store": "^8.0.0",
     "electron-util": "^0.17.0",
+    "i": "^0.3.7",
     "idb-keyval": "^6.0.2",
     "mark.js": "^8.11.1",
     "mysql": "^2.18.1",
+    "npm": "^9.2.0",
     "objection": "^3.0.0",
     "pg": "^8.4.1",
     "require-from-string": "^2.0.2",
     "rollup": "^3.10.0",
     "rollup-plugin-svelte": "^7.0.0",
-    "schild": "^0.8.0",
+    "schild": "^0.9.0",
     "serialize-error": "^11.0.0",
     "snarkdown": "^2.0.0",
     "svelte": "^3.29.4",
